--- a/06-webserver/package.json
+++ b/06-webserver/package.json
@@ -8,8 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "nodemon": "^2.0.22"
-  }
+  "license": "ISC"
 }
